--- a/week42/lab1_solutions.ipynb
+++ b/week42/lab1_solutions.ipynb
@@ -185,6 +185,7 @@
     "We are going to study how this current injection affects the membrane potential.\n",
     "In order to visualize the difference between active and passive ion channels,\n",
     "we are going to start by simulating a part of a neuron with passive ion channels only.\n",
+    "This means that there are **no voltage-gated ion channels** in this simulation.\n",
     "You can think of this as a part of a passive dendrite.\n",
     "A passive dendrite can be compared to a leaky water hose: similiar to water leaking out of the\n",
     "holes in the water hose, electric currents will \"leak out\" of the passive ion channels.\n",
@@ -196,9 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -371,9 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "morphology = './cells/axon.hoc'\n",
@@ -536,9 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# define cell morphology\n",
@@ -665,9 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# define cell morphology\n",
@@ -732,9 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# define cell morphologies\n",
@@ -926,9 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# define cell morphology\n",
@@ -977,7 +966,10 @@
    "source": [
     "**a)**\n",
     "Use the slider to simulate how an action potential propagates through the axon.\n",
-    "Describe the differences between an action potential and a graded potential in terms of how they develop in space and time."
+    "Describe the differences between an action potential and a graded potential in terms of how they\n",
+    "* develop in space (for a specific time point) and\n",
+    "\n",
+    "* develop in time (for a specific point in space)"
    ]
   },
   {
@@ -1013,44 +1005,25 @@
     "\n",
     "<!-- --- end solution of exercise --- -->\n",
     "\n",
+    "<!-- !bsubex -->\n",
+    "<!-- The distance between two nodes of ranvier can be up to $1.5$ mm. -->\n",
+    "<!-- Would you say that this action potential is shorter than or longer than the distance between two Ranvier nodes? -->\n",
+    "<!--  -->\n",
+    "<!-- !bc -->\n",
+    "<!-- !ec -->\n",
+    "<!-- !bblock -->\n",
+    "<!-- Answer: -->\n",
+    "<!-- !eblock -->\n",
+    "<!-- !bc -->\n",
+    "<!-- !ec -->\n",
+    "<!--  -->\n",
+    "<!-- !bsol -->\n",
+    "<!-- By using the slider you can see that more than $1.5$ mm of the axon will have an membrane potential above threshold $\\sim -55$mV. This means that this action potential has a spatial reach that is longer than the distance between two nodes of Ranvier. -->\n",
+    "<!-- !esol -->\n",
+    "<!-- !esubex -->\n",
+    "\n",
+    "\n",
     "**b)**\n",
-    "The distance between two nodes of ranvier can be up to $1.5$ mm.\n",
-    "Would you say that this action potential is shorter than or longer than the distance between two Ranvier nodes?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Answer:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<!-- --- begin solution of exercise --- -->\n",
-    "**Solution.**\n",
-    "By using the slider you can see that more than $1.5$ mm of the axon will have an membrane potential above threshold $\\sim -55$mV. This means that this action potential has a spatial reach that is longer than the distance between two nodes of Ranvier.\n",
-    "\n",
-    "<!-- --- end solution of exercise --- -->\n",
-    "\n",
-    "\n",
-    "**c)**\n",
     "By adding a second electrode, we can stimulate the axon at two locations at the same time.\n",
     "\n",
     "What happens when two action potentials meet?"
@@ -1106,9 +1079,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# define cell morphology\n",
@@ -1160,8 +1131,8 @@
     "\n",
     "\n",
     "\n",
-    "**d)**\n",
-    "How long is the relative refractory period?"
+    "**c)**\n",
+    "How long time does it take from an action potential onset until the relative refractory period has passed? (How long is the absolute refractory period + the relative refractory period?)"
    ]
   },
   {
@@ -1200,8 +1171,6 @@
     "\n",
     "<!-- --- begin solution of exercise --- -->\n",
     "**Solution.**\n",
-    "*NB! Typo in question!* This question was supposed to be: **How long time after the action potenital onset, is the relative refractory period over?**\n",
-    "\n",
     "After generating an action potential by injecting a current pulse into the cell, another equal current pulse can only result in another action potential with the same amplitude as the first one, if we wait with the second input current until both the absolute refractory period and the relative refractory period have passed. Since we don't know how long the absolute refractory period is, we cannot compute the exact duration of the relative refractory period.\n",
     "\n",
     "By running the simulation below, we find that we need to wait $\\sim 14$ ms before injecting the second current, in order to generate two action potentials with the same amplitude. This means that the relative refractory period is finished after about $14$ ms."
@@ -1210,9 +1179,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# define cell morphology\n",
@@ -1303,9 +1270,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# define cell morphology\n",
@@ -1404,9 +1369,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# define cell morphology\n",
@@ -1518,9 +1481,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# define cell morphology\n",
@@ -1619,9 +1580,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# define cell morphology\n",
@@ -2341,7 +2300,25 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.7"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
